--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Horoscope</title>
 </head>
 <body>
-    
+    <h1>Your Horoscope</h1>
+    <form>
+        <input type="text">
+        <button>Show My Horoscope</button>
+    </form>
     <script src="./app.js"></script>
 </body>
 </html>
