adding javascript to display message

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>Your Horoscope</h1>
+    <div id="horoscope-text"></div>
     <form>
         <input type="text">
-        <button>Show My Horoscope</button>
+        <button id="start-btn">Show My Horoscope</button>
     </form>
     <script src="./app.js"></script>
 </body>
