--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Horoscope</title>
-</head>
-<body>
-    <h1>Your Horoscope</h1>
-    <div id="horoscope-text"></div>
-    <form>
-        <input type="text">
+  </head>
+  <body>
+    <div class="container">
+      <h1>Your Horoscope</h1>
+      <div id="horoscope-text"></div>
+      <form>
+        <input type="text" />
         <button id="start-btn">Show My Horoscope</button>
-    </form>
+      </form>
+    </div>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
