--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container-input">
         <div class="dropdown">
           <div id="dropdown-click" class="dropdown-text">
-            Klick Choose to your Star Sign
+            Klick to Choose Your Star Sign
           </div>
           <div id="myDropdown" class="dropdown-content">
             <p class="sign" id="capricorn">Capricorn</p>
